--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..." maxlength="140"></textarea>
                   </div>
                 </fieldset>
 
@@ -233,6 +233,7 @@
       </section>
     </template>
   <script src="/vendor/pristine/pristine.min.js"> </script>
+  <script src="/vendor/nouislider/nouislider.js"> </script>
   <script type="module" src="/js/main.js"></script>
 </body>
 </html>
